# gateway

./: .dockerignore  .env.enterprise-dev.example  .env.prod.example  .env.sandbox.example  .env.starter.example  .gitignore  BACKLOG.md  DEPLOYMENT.md  DESIGN.md  Dockerfile  ENTERPRISE_INTEGRATION.md  LICENSE  LOAD_TESTING.md  README.md  backend-coverage.json  config.yaml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.regex-dev.yml  docker-compose.yml  frontend-coverage.json  pyproject.toml  requirements-dev.txt  requirements.txt
dlp-patterns/: common_regex.yaml  gitleaks.yaml  google_dlp.yaml  owasp_crs.yaml  presidio.yaml  prompt_injection.yaml
docs/: agent_trust_score_improvement_plan.md  agent_trust_score_signal_mapping.md  bert_incremental_learning_implementation.md  bert_incremental_learning_plan.md  building-images.md  ci.md  deployment.md  reference.md  test_coverage.md  user-manual.md
frontend/: .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
scripts/: README.md  loadtest_config.yaml  loadtest_traffic_db.py  loadtest_traffic_db.results.md  loadtest_traffic_db_sweep.sh  loadtest_traffic_proxy.py  mock_upstream.py  run_tier2.sh
tests/: conftest.py  test_agent_display_name.py  test_agent_traffic.py  test_alert_email_url.py  test_anthropic_proxy.py  test_audit_log.py  test_auth.py  test_cli_commands.py  test_cli_signing_paths.py  test_config_and_migrations.py  test_content_block_rendering.py  test_crypto.py  test_csv_json_exports.py  test_dashboard_api.py  test_dashboard_endpoints.py  test_dashboard_pagination.py  test_dlp_alert_severity.py  test_dlp_delta_scan.py  test_dlp_json_walk.py  test_dlp_policies.py  test_dlp_scanners.py  test_dlp_triage.py  test_host_endpoints.py  test_host_resolver.py  test_injection_patterns.py  test_intent_classifier.py  test_ledger.py  test_mcp_aggregator.py  test_mcp_dashboard.py  test_mcp_ledger_units.py  test_mcp_policy.py  test_mcp_proxy.py  test_mcp_registry.py  test_network_origin.py  test_notifications.py  test_pagination.py  test_path_kind.py  test_pdf_export.py  test_pool_config.py  test_proxy_handler.py  (+21 more)
wheels/: .gitkeep
(+226 files in other folders)
